--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: perl
 perl:
+  - "5.26"
+  - "5.24"
   - "5.22"
   - "5.20"
   - "5.18"
@@ -11,6 +13,7 @@ perl:
 
 env:
   - LIBVER=git
+  - LIBVER=1.8.0
   - LIBVER=1.7.0
   - LIBVER=1.6.0
   - LIBVER=1.5.0
