--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
 
 install:
   - perl .travis/install-libssh2.pl $LIBVER
-  - cpanm Module::Install Module::Install::CheckLib ExtUtils::Constant;
+  - cpanm Module::Install Module::Install::CheckLib ExtUtils::Constant Pod::Simple;
 
 script:
   - perl Makefile.PL lib=libssh2/lib inc=libssh2/include ldargs=-Wl,-rpath=libssh2/lib && make test
